Port codebase to Java 11